--- a/src/components/GameDetail.css
+++ b/src/components/GameDetail.css
@@ -1,19 +1,22 @@
-.cover-image {
-  width: 40%;
-  height: 40%;
-}
-
-.game-card {
-  display: flex;
-  justify-content: left;
-  align-items: flex-start ;
-}
-
 .game-detail {
   padding: 0.5rem;
-  width: 60%;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
+}
+
+@media screen and (min-width: 992px) {
+  .cover-image {
+    width: 40%;
+    height: 40%;
+  }
+  .game-card {
+    display: flex;
+    justify-content: left;
+    align-items: flex-start ;
+  }
+  .game-detail {
+    width: 60%;
+  }
 }
 
 .game-info {
